--- a/views/room.ejs
+++ b/views/room.ejs
@@ -37,7 +37,7 @@
       </div>
       <div id="sendMessageContainer" class='mainContainer'>
         <input type="text" id="messageInput">
-        <button id="sendMessage">Send</button>
+        <button id="sendMessage" class="sendMessageButton">Send</button>
       </div>
     </div>
 
