--- a/assets/css/homePageStyles.css
+++ b/assets/css/homePageStyles.css
@@ -1,5 +1,5 @@
 html {
-  background-color: lightblue;
+  background-color: rgb(101, 101, 101);
 }
 
 h1 {
@@ -16,8 +16,6 @@ body {
 
 #roomsDiv {
   margin-top: 2%;
-  border: 3px solid black;
-  background-color: #ebebeb;
 }
 
 #roomsListHeader {
@@ -32,8 +30,8 @@ body {
 }
 
 .roomRedirect {
-  border: 3px solid black;
-  background-color: white;
+  border: 3px solid white;
+  color: white;
   display: inline-block;
   width: 70%;
   padding: 5px;
@@ -41,7 +39,7 @@ body {
 }
 
 .roomRedirect:hover {
-  background-color: darkgrey;
+  background-color: black;
 }
 
 .roomContainer:hover{
@@ -49,23 +47,22 @@ body {
 }
 
 #githubLink {
-  border: 3px solid black;
+  color: white;
+  border: 3px solid white;
   display: inline-block;
-  background-color: rgb(255, 255, 255);
-  width: 5%;
   margin-right: 5%;
-}
-
-#createRoomLink, #homePagelink {
-  border: 3px solid black;
-  display: inline-block;
-  background-color: white;
   padding: 2%;
 }
 
-#createRoomLink:hover, #homePageLink:hover, #githubLink:hover {
-  background-color: grey;
+#createRoomLink, #homePagelink {
   color: white;
+  border: 3px solid white;
+  display: inline-block;
+  padding: 2%;
+}
+
+#createRoomLink:hover, #homePagelink:hover, #githubLink:hover {
+  background-color: black;
 }
 
 a:link {
@@ -75,7 +72,6 @@ a:link {
 
 a:visited {
   text-decoration: none;
-  color: black;
 }
 
 a:hover {
@@ -84,7 +80,6 @@ a:hover {
 
 #invalidRoomError{
   border: 3px solid black;
-  background-color: #ebebeb;
   width: 40%;
   display: inline-block;
 }
